<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/step_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10" />

        <LinearLayout
            android:id="@+id/stepper_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <Button
                android:id="@+id/previous"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onPreviousClicked"
                android:text="@string/previous"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:selectableItemBackground"/>

            <TextView
                android:id="@+id/steps_progress"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp" />

            <Button
                android:id="@+id/next"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onNextClicked"
                android:text="@string/next"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:selectableItemBackground"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>


